--- a/assets/css/homePage.css
+++ b/assets/css/homePage.css
@@ -35,17 +35,21 @@ nav a{
     left:50%;
     transform: translate(-50%, -50%);
     width: 550px;
-    background-color: rgba(240, 248, 255, 0.728); 
+    background-color: rgba(240, 248, 255, 0.8); 
     border-radius: 10px; 
     padding: 30px 30px 30px 30px;
     box-shadow: 0px 5px 20px 10px rgba(0,0,0,0.2);
+    
 }
 
 .form h1 {
     font-size: 40px;
-    font-weight: 600;
+    font-weight: 400;
+    height: 50px;
+    border-radius: 10px;
     margin-bottom: 30px;
-    /* color:#fff */
+    color:#fff ;
+    background-color: rgb(51, 99, 51);
 }
 
 .form h2{
@@ -54,12 +58,10 @@ nav a{
     margin-bottom: 30px;
 }
 .form p{
-    font-size: 20px;
-    font-weight: 350;
+    font-size: 15px;
+    font-weight: 550;
     margin-bottom: 20px;
 }
-
-
 
 form select{
     height:50px;
@@ -74,7 +76,7 @@ form select{
 }
 
 form input{
-     height: 50px;
+    height: 50px;
     width: 100%;
     padding:0 15px;
     font-size:18px;
@@ -88,22 +90,28 @@ form .select-btn{
     margin-top:20px;
 }
 
-form input[type="submit"]{
+form button{
     margin-top: 30px;
-    /* background-color: rgba(9, 126, 7, 0.924); */
-    color:#fff;
-    padding:0 1px;
-    font-size: 20px;
-    /* cursor: pointer; */
-    /* width:100%; */
+    text-align: center;
+   font-weight: 500; 
+    width:100%; 
+    height:50px;
 }
 
-.form .select-btn p {
+form .select-btn p {
     margin: 10px;
     width:350px;
     font-size: 18px;
     font-weight: 400;
     color: #d82020;
-    text-align: left;
-    
+    text-align: left;   
+}
+
+form a{
+    text-decoration: none;
+    color:white;
+}
+
+form a:hover{
+    color:rgb(255, 235, 13);
 }
